    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_derecha"
        android:paddingEnd="@dimen/padding_izquierda"
        android:layout_gravity="center_horizontal"
        android:id="@+id/addAlbum_dialog">

            <EditText
                android:id="@+id/req_nombreAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/didact_gothic"
                android:hint="@string/hint_nameAlbum"
                android:inputType="text" />

            <EditText
                android:id="@+id/req_editorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/didact_gothic"
                android:hint="@string/hint_editorial"
                android:inputType="text" />

            <EditText
                android:id="@+id/req_cantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/didact_gothic"
                android:hint="@string/hint_cantidad"
                android:inputType="text" />

</LinearLayout>