<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:fontFamily="@font/didact_gothic"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="Solicitud de nuevo álbum"/>

    <EditText
        android:id="@+id/req_nombreAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/didact_gothic"
        android:hint="@string/hint_nameAlbum" />
    <EditText
        android:id="@+id/req_editorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/didact_gothic"
        android:hint="@string/hint_editorial"/>
    <EditText
        android:id="@+id/req_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/didact_gothic"
        android:hint="@string/hint_cantidad"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RaisedButtonGray"
            android:text="Cancelar"/>
        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/RaisedButtonDark"
            android:text="Enviar"/>

    </LinearLayout>
</LinearLayout>